Next try to fix image wrapping

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -25,6 +25,7 @@ $mappy-queries: (
   phone: mappy-bp(max-width small),
   tablet: mappy-bp(small medium),
   desktop: mappy-bp(medium),
+  desktop-large: mappy-bp(large),
 );
 
 
